commited current version

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -54,7 +54,7 @@ urlcolor=black
 \definecolor{blue1}{HTML}{B5F1FF} % light blue
 \definecolor{blue2}{HTML}{E0F9FF} % very light blue
 
-\title{Disease Knowledge Transfer for Alzheimer's Variants}
+\title{Disease Knowledge Transfer across Alzheimer's Variants}
 %
 \titlerunning{Disease Knowledge Transfer across Alzheimer's Variants}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
@@ -63,7 +63,7 @@ urlcolor=black
 
 % * <mrazvan22@gmail.com> 2018-03-02T16:41:47.321Z:
 % 
-% Author list: Me, Pere (helped with validation), Marco (used his code), Alex (writing+tadpole), Neil (tadpole),  Arman, Keir (DTI data), Seb, Danny
+% Author list: Me, Marco (writing+model code), Pere (helped with validation), Alex (writing+tadpole), Neil (tadpole),  Arman, Keir (DTI data), Seb, Danny
 % 
 % ^ <mrazvan22@gmail.com> 2018-03-02T16:55:06.003Z.
 
@@ -72,19 +72,7 @@ urlcolor=black
 
 \begin{abstract}
 
-% write background in abstract. motivation. take out 
-
-We present Disease Knowledge Transfer (DKT), a technique for transferring biomarker correlations between Alzheimer's disease (AD) variants. DKT allows, for the first time, to infer biomarker values and their progressions in rare variants of AD for which data on such biomarkers is not available, by learning them from a different disease. For doing this, we formulate a new dementias paradigm called "Affected Overlap", which proposes that dementias are diseases that affect overlapping brain regions, and thus present certain biomarker characteristics that are shared and can thus be transferred across diseases. We then formulate the DKT model implementing this paradigm as a joint-disease generative model of biomarker progression which disentangles the biomarker correlations that are disease-specific from those correlations that are disease-agnostic. We demonstrate DKT on three datasets: (1) the TADPOLE Challenge dataset containing typical AD subjects (tAD) from the Alzheimer's Disease Neuroimaging Initiative (ADNI) dataset who had MRI, FDG-PET, AV45, AV1451 or DTI scans, as well as two datasets from our local centre containing subjects with (2) typical AD and (3) Posterior Cortical Atrophy (PCA) that have only undergone MRI scans. We train the DKT model on all three datasets at once, and show that it is able to predict, in PCA subjects, plausible population-level biomarker for FDG, DTI, AV45 and AV1451 biomarkers, for which no data was available. We validate the predictions of DKT using a small set of DTI scans for the PCA cohort. We demonstrate that DKT may be a useful tool to analyse and understand rare forms of dementias for which multimodal data is not available or is limited (e.g. cross-sectional). Finally, by leveraging data from multiple diseases, DKT also has the potential to provide more accurate disease staging compared to traditional disease progression models, which is useful for patient stratification in clinical trials.
-% * <alexandra.young@ucl.ac.uk> 2018-03-02T17:28:57.289Z:
-% 
-% > Finally,
-% You've got finally twice
-% 
-% ^ <alexandra.young@ucl.ac.uk> 2018-03-02T17:29:38.345Z:
-% 
-% Could put we demonstrate (or something a bit weaker)
-%
-% ^ <alexandra.young@ucl.ac.uk> 2018-03-02T19:02:52.149Z.
+The availability of multimodal biomarker measurements in large scale clinical data is fundamental for the application of current disease progression models of neurodegenerative disorders. For this reason, disease progression modeling of rare dementias is currently very challenging, due to the presence of missing data and to the low sample size. To overcome this problem, in this study we introduce Disease Knowledge Transfer (DKT), a technique for transferring biomarker's progression models between Alzheimer's disease (AD) variants. We assume that different type of dementias affect overlapping brain regions ("Affected Overlap"), and thus present shared biomarker characteristics that can be transferred across diseases. We then implement this paradigm as a joint-disease generative model of biomarker progressions, disentangling disease-specific from  disease-agnostic biomarker relationships. We demonstrate DKT on independent datasets of 1) typical AD data (tAD), with large sample size and several biomarkers available over time, and 2) Posterior Cortical Atrophy (PCA) data, for which only MRI scans are available. DKT is able to predict, in testing PCA subjects, plausible population-level biomarkers for structural and molecular imaging biomarkers, for which no data was available. DKT may be a useful tool to analyse and understand rare forms of dementias for which multimodal data is not available or is limited. Moreover, by leveraging data from multiple diseases, DKT also has the potential to provide more accurate disease staging compared to traditional disease progression models.
 
 
 \keywords{Disease Progression Model, Transfer Learning, Manifold Learning, Alzheimer's Disease, Posterior Cortical Atrophy}
@@ -94,21 +82,20 @@ We present Disease Knowledge Transfer (DKT), a technique for transferring biomar
 
 
 % biomarkers in alzheimer's -> measuring the evolution helps staging in clinical trials
-There currently exist several image-based biomarkers for Alzheimer's disease that can be used to track its progression: AV45 Positron Emission Tomography (PET) measuring amyloid-plaque aggregation, AV1451 PET measuring tau tangle aggregation, Flourodeoxyglucose (FDG) PET measuring brain hypometabolism, Magnetic Resonance Imaging (MRI) measuring structural integrity and Diffusion Tensor Imaging (DTI) measuring connectivity integrity. Measuring the exact evolution of these biomarkers over the disease progression can lead to better disease staging of patients, which helps stratification in clinical trials.
+Several image-based biomarkers for Alzheimer's disease (AD) are currently used to track the progression of the pathology: AV45 Positron Emission Tomography (PET) measuring amyloid-plaque aggregation, AV1451 PET measuring Tau tangle aggregation, Flourodeoxyglucose (FDG) PET measuring brain hypometabolism, Magnetic Resonance Imaging (MRI) measuring structural integrity and Diffusion Tensor Imaging (DTI) measuring connectivity integrity. Measuring the exact evolution of these biomarkers over the disease progression is fundamental for better understanding the pathology, as well as for improving the stratification in clinical trials through patient staging.
 
+% hypothetical model -> dimention 1: ordering across modalities -> dimention 2: spatial ordering
+A hypothetical model of disease progression has been previously published by \cite{jack2010hypothetical}, which proposes that the first biomarkers to become abnormal are measures of amyloid beta aggregation, followed by tau abnormalities, hypometabolism, structural MRI-based measures and finally cognitive decline. While this hypothetical model proposes a inter-modality ordering of biomarkers in typical AD, it has also been observed that within the same modality, biomarker measurements have a spatial sequence of abnormality that correlates with Braak stages: hippocampal volumes and entorhinal measures become abnormal first, followed by other structures within the temporal lobe, followed by parietal and frontal abnormalities.
 
-% hypothetical model has specific ordering of modality biomarkers -> ordering or spatial biomarkers (different dimension) -> spatial differences in different dementias -> network vulnerability hypothesis.
-A hypothetical model of disease progression has been previously published by \cite{jack2010hypothetical}, which proposes that the first biomarkers to become abnormal are measures of amyloid beta aggregation, followed by tau abnormalities, hypometabolism, structural MRI-based measures and finally cognitive decline. While this hypothetical model proposes a inter-modality ordering of biomarkers in typical AD, it has also been observed that within the same modality, biomarker measurements have a spatial sequence of abnormality that correlates with Braak stages: hippocampal volumes and entorhinal measures become abnormal first, followed by other structures within the temporal lobe, followed by parietal and frontal abnormalities. However, the spatial ordering of abnormality differs in other Alzheimer's variants. For example, in Posterior Cortical Atrophy, posterior regions such as the occipital lobe and superior parietal regions have been shown to become affected. More generally, the network vulnerability theory by Seeley et al. \cite{seeley2009neurodegenerative} suggests that damage to specific underlying connectivity networks leads to spatially distinct patterns of neurodegeneration. Overall, there is a great degree of heterogeneity within these diseases, which led some to suggest that subjects with different Alzheimer's variants lie on a continuum of phenotypical variation \cite{crutch2012posterior}. 
-% * <alexandra.young@ucl.ac.uk> 2018-03-02T19:01:16.243Z:
-% 
-% > The network vulnerability theory by Seeley et al. \cite{seeley2009neurodegenerative} suggests that damage to specific underlying connectivity networks leads to spatially distinct patterns of neurodegeneration. There is nevertheless a great degree of heterogeneity within these diseases, which led some to suggest that subjects with different Alzheimer's variants lie on a continuum of phenotypical variation \cite{crutch2012posterior}. 
-% The relationship between these two statements is unclear from the way its written
-% 
-% ^.
+Several data-driven methods have been proposed in order to reconstruct group-wise long term biomarker progressions from collections of short term individual biomarker measurements (\cite{lorenzi2017disease}, Young, Donohue). These approaches mostly rely on the estimation of a latent time reparameterization associated with each individual, often encoded by a translation (time shift) of the subject's measurements over the temporal axis.  This time reparameterization can be used as a proxy of disease staging associated with an individual biomarker profile relatively to the global disease progression model. 
 
-The amount of heterogeneity within each variant and the network vulnerability hypothesis by \cite{seeley2009neurodegenerative} suggest that it should be theoretically possible to perform transfer learning across Alzheimer's variants. While recent studies \cite{hon2017towards} tried to perform transfer learning by transferring knowledge from generic image datasets to Alzheimer's disease, we are not aware of any studies that have tried to transfer knowledge across different types of Alzheimer's variants or other dementias. Moreover, current transfer learning approaches focused only on improving diagnostic classification using supervised approaches. We are not aware of any study to date that has tried to estimate, through transfer learning, a continuous disease progression manifold that doesn't rely on diagnoses. There are two key benefits to performing transfer learning across dementia variants: 1. biomarker evolutions can be estimated in rare dementias for which there is not enough data (uni-modal datasets, few subjects, cross-sectional data only) and 2. adding extra information from other datasets can help with staging and biomarker trajectory estimation.
+% Flow: multimodal data needed for disease progression -> disease progression on rare dementias is challenging -> cannot apply model learned from other disease because of different spatial patterns -> but studies show at least some partial spatial overlap -> therefore transfer learning possible due to presence of "some overlap" -> benefits of transfer learning -> existing transfer learning literature
+The availability of multimodal collections of biomarker's measurements across clinical groups is fundamental to the application of such disease progression models. For this reason, the application of disease progression modeling to rare dementia type is currently very challenging, due to the associated problem of missing biomarkers and low sample size.  Moreover, an average model of disease progression estimated from sporadic AD cases may not generalize to specific disease variants. For example, in Posterior Cortical Atrophy (PCA), posterior regions such as the occipital lobe and superior parietal regions have been shown to become affected early. While the spatial patterns are distinct between various forms of dementia, recent studies (Ossenkoppele, HBM, 2015) have showed at least partial spatial-overlap between different clinical phenotypes, while others have even suggested that PCA and typical AD subjects lie on a continuum of phenotypical variation \cite{crutch2012posterior}. The presence of overlap in pathology patterns across different dementias suggests that it should be theoretically possible to perform transfer learning across the diseases. There are two key benefits to performing transfer learning across dementia variants: 1. biomarker evolutions can be estimated for rare dementias for which there is not enough data (unimodal datasets, few subjects, cross-sectional data only) and 2. adding extra information from other datasets can help with staging and biomarker trajectory estimation. While recent studies \cite{hon2017towards} tried to transfer knowledge from generic image datasets to Alzheimer's disease, we are not aware of any studies that have tried to transfer knowledge across different types of Alzheimer's variants or other dementias. Furthermore, we are not aware of any studies to have done transfer learning in medical imaging for estimating a continuous disease progression without reliance on diagnostic classes, which are often biased.
 
-We propose Disease Knowledge Transfer, a generative model that estimates progression of multiple dementias simultaneously and which inherently performs transfer learning from one type of dementia to another. The model achieves this by disentangling \emph{disease-specific} biomarker correlations from \emph{disease-agnostic} correlations.  We fit the model simultaneously to three datasets: 1. the TADPOLE Challenge dataset containing subjects from the ADNI study containing MRI, FDG-PET, DTI, AV45 and AV1451 scans 2. MRI scans from typical AD subjects in our local centre and 3. MRI scans from patients with Posterior Cortical Atrophy (PCA) from our local centre. We then used the fitted model to predict non-MRI trajectories for PCA patients, which have been learned from the ADNI dataset. We finally validated the DTI trajectories in PCA using a small test set of 20 DTI scans from the PCA patients and controls from our local centre.
+% To overcome this problem, in this study we aim at defining a probabilistic framework for the estimation of disease progression trajectories in small datasets of specific disease subtypes, in presence of missing biomarkers and low numerosity. To this end we introduce the idea of \emph{transfer learning} of disease progression models across datasets. In particular, our framework is formulated in a probabilistic fashion, in order to quantify the uncertainty associated with low sample size and high variability characterizing the problem. 
+
+We propose Disease Knowledge Transfer (DKT), a generative joint model that estimates continuous multimodal progressions for multiple dementias simultaneously and which inherently performs transfer learning between the modelled dementia phenotypes. This is achieved by disentangling \emph{disease-specific} from \emph{disease-agnostic} biomarker relationship. We fit the DKT model to three datasets simultaneously: (1) the TADPOLE Challenge dataset containing subjects from the ADNI study with MRI, FDG-PET, DTI, AV45 and AV1451 scans, (2) MRI scans from typical AD subjects in our local centre and (3) MRI scans from patients with Posterior Cortical Atrophy (PCA) from our local centre. We then used the fitted model to predict non-MRI trajectories for PCA patients, which have been learned from the multimodal TADPOLE dataset. We finally validated the DTI trajectories in PCA using a small test set of 20 DTI scans from the PCA patients and controls from our local centre.
+
 % * <alexandra.young@ucl.ac.uk> 2018-03-02T17:54:07.562Z:
 % 
 % > unsupervised
@@ -124,12 +111,13 @@ We propose Disease Knowledge Transfer, a generative model that estimates progres
 \begin{figure}[h]
  \centering
  \includegraphics[width=\textwidth]{figures/disease_knowledge_transfer.png}
- \caption{Outline of the proposed framework for joint modelling of multiple diseases. We assume that each disease can be modelled as the evolution of some abstract dysfunctionality scores, each related to a brain region. Each dysfunctionality score is then assumed to be modelled as the progression of several biomarkers within that same region, but having different modalities. One key assumption of the model is that the biomarkers within each unit (bottom row) are disease agnostic (i.e. have the same dynamics for every disease), while the dysfunction scores (top row) are disease specific.}
+ \caption{Outline of the proposed framework for joint modelling of multiple diseases. We assume that each disease can be modelled as the evolution of abstract dysfunctionality scores, each related to different brain regions. Each dysfunctionality score is then assumed to be modelled as the progression of several biomarkers within that same region, but having different modalities. One key assumption of the model is that the biomarkers within each unit (bottom row) are disease agnostic (i.e. have the same dynamics for every disease), while the dysfunction scores (top row) are disease specific.}
+ \label{fig:diagram}
 \end{figure}
 
 \subsection{Methods}
-% TODO: this was copy-pasted from a draft 2 weeks ago. needs re-writing!
-For modelling disease-agnostic correlations, we assume biomarkers are grouped into \emph{functional units}, where correlations within each unit are disease-agnostic (e.g. biomarkers corresponding to the same ROI).  Each biomarker is assigned a-priori to a specific functional unit, which corresponds to a brain region, say temporal lobe (Fig 1., bottom).  For example, biomarkers assigned to the temporal unit could be: amyloid in temporal lobe, tau in temporal lobe, MRI atrophy in temporal lobe and certain memory tests. Using an arbitrary disease progression model (e.g. CITE), for each region-specific functional unit we can model the correlation of biomarkers within that functional unit (Figure 1, bottom), which allows us to reconstruct a region- or unit-specific \emph{dysfunction} progression axis which can be used for staging subjects. Finally, we express the disease specific correlations (Figure 1, top) not directly with each biomarkers, but via the dysfunction scores estimated within each functional unit.  
+
+Fig. \ref{fig:diagram} shows the overall diagram of our proposed framework for joint modelling of disease. We assume that each disease can be modelled as the evolution of abstract dysfunctionality scores, each related to different brain regions (top row). Each dysfunctionality score is then assumed to be modelled as the progression of several biomarkers within that same region, but having different modalities (bottom row). Each group of biomarkers in the bottom row will be called a \emph{functional unit}, because the correlations between biomarkers are related though common "function" in a disease agnostic way, because they are related to the same underlying brain region. Biomarker groupings into functional units are defined a-priori. We model the correlations within each unit using a Gaussian-Process based disease progression model \cite{lorenzi2017disease}, for each region-specific functional unit we can model the correlation of biomarkers within that functional unit (Figure 1, bottom), which allows us to reconstruct a region- or unit-specific \emph{dysfunction} progression axis which can be used for staging subjects. Finally, we express the disease specific correlations (Figure 1, top) not directly with each biomarkers, but via the dysfunction scores estimated within each functional unit.  
 
 The proposed model is parsimonious, easily interpretable by abstracting away biomarker information into the functional units, and can be used for \emph{disease knowledge transfer}, i.e. learning correlations in one disease from another. Our approach is inspired by transfer learning methods from machine learning, but the model is generative, easing interpretability.
 
@@ -176,7 +164,7 @@ Let's assume we have MRI and PET data in tAD (from ADNI), but only MRI data for 
 \section{Results}
 
 % Fig1: biomarker traj. over dysfunction scores in one functional unit -> Fig2: dysfunction trajectories over disease stage in the two disease models -> Fig3: inferred biomarker trajectories "directly" over disease stage  in PCA
-Fig. \ref{fig:occipUnit} shows the estimated biomarker trajectories within the \emph{occipital unit} plotted over the dysfunction scores, along with samples from the model posterior and aligned subject data. The X-axis shows the dysfunctionality scores within the occipital unit, which represent estimated time-shifts, in months, from an arbitrary reference X=0, while the Y-axis shows biomarker values normalised to [0,1] range. The model shows a good data fit, and we can observe most PCA subjects having abnormal occipital volumes, thus leading to high occipital dysfunctionality scores, in line with the current understanding of PCA as affecting posterior regions \cite{crutch2012posterior}. Fig. \ref{fig:occipUnit} shows the progression of dysfunctionality scores over the disease stage for (a) typical AD and (b) PCA (disease ). In typical AD, we see that temporal dysfunction becomes abnormal earliest, while PCA shows early parietal dysfunction, again in line with previous findings in the literature \cite{crutch2012posterior} (J.C. Baron, Neuroimage, 2001). In Fig. \ref{fig:PCAtrajByModality} we plot the inferred biomarker trajectories for PCA across the five different modalities: MRI Volumes, DTI, FDG, AV45 and AV1451. The trajectories 
+Fig. \ref{fig:occipUnit} shows the estimated biomarker trajectories within the \emph{occipital unit} plotted over the dysfunction scores, along with samples from the model posterior and aligned subject data. The X-axis shows the dysfunctionality scores within the occipital unit, which represent estimated time-shifts, in months, from an arbitrary reference X=0, while the Y-axis shows biomarker values normalised to [0,1] range. The model shows a good data fit, and we can observe most PCA subjects having abnormal occipital volumes, thus leading to high occipital dysfunctionality scores, in line with the current understanding of PCA as affecting posterior regions \cite{crutch2012posterior}. Fig. \ref{fig:occipUnit} shows the progression of dysfunctionality scores over the disease stage for (a) typical AD and (b) PCA. In typical AD, we see that temporal dysfunction becomes abnormal earliest, while PCA shows early parietal dysfunction, again in line with previous findings in the literature \cite{crutch2012posterior} (J.C. Baron, Neuroimage, 2001). In Fig. \ref{fig:PCAtrajByModality}, we plot the inferred biomarker trajectories for PCA directly across the disease progression. We do this for five different modalities: MRI Volumes, DTI, FDG, AV45 and AV1451. The results again recapitulate known patterns in PCA, where trajectories from posterior regions become abnormal first in MRI, DTI and AV1451, although in FDG we instead see temporal and hippocampal regions more affected. This might be due to the normalisation of the FDG trajectories on the Y-axis to the [0,1] range, which results in less scaling to trajectories that contain more disease signal. 
 
 \newcommand{\expFld}{figures}
 
@@ -215,25 +203,33 @@ PCA\\
 \end{figure}
 % * <mrazvan22@gmail.com> 2018-03-02T15:58:16.565Z:
 % 
-% some trajectories in AV45 screwed up due to bad initial starting point. Will try to re-fit the model if I have time.
+% two trajectories in AV45 screwed up due to bad initial starting point. Will take around 2-3h to fix, by implementing a more informed starting point, and re-fit the model. I'll try to see if I have time, otherwise might drop that modality?! Or take out the plot entirely.
 % 
 % ^.
 
 
 \section*{Validation}
 
+We performed validation using a separate test set of 20 DTI scans from controls and PCA patients from our local cohort. Fig. \ref{fig:DTIvalid} shows the estimated DTI biomarker trajectories plotted directly against the disease progression time-shifts, along with the DTI data from the test set. The time shift of each subject was estimated only based on their MRI scans. The inferred trajectories in PCA show good agreement with the data in the cingulate, hippocampus and temporal lobes, but less agreement in the other regions. This might be because the dataset that was used to train the model had better disease signal in DTI regions more traditionally associated with typical AD.
+
 % LOCAL DTI validation
 
 \begin{figure}[H]
  \includegraphics[width=\textwidth, trim=0 0 0 0, clip]{figures/validDtiPCA.png}
- \caption{Validation of the Disease Knowledge Transfer Model using DTI data of PCA subjects from our local cohort. No DTI data, or other non-MRI data from PCA subjects was used to fit the model. The estimated trajectories seem to approximate the data reasonably well in temporal, hippocampus and cingulate regions, and less well in the other regions.}
+ \caption{Validation of the Disease Knowledge Transfer Model using DTI data of PCA subjects from our local cohort. Each subject has been shifted along the X-axis only according to their MRI data. No DTI data from PCA subjects was used to fit the model.}
 \label{fig:DTIvalid}
 \end{figure}
 
-\section{Acknowledgements}
+\section{Discussion}
 
-This work was supported by the EPSRC Centre For Doctoral Training in Medical Imaging with grant EP/L016478/1. AE received a McDonald Fellowship from the Multiple Sclerosis International Federation (MSIF, www.msif.org), and the ECTRIMS - MAGNIMS Fellowship. ALY was supported through an EPSRC Doctoral Prize Fellowship. NPO and SG received funding from the EU Horizon 2020 research and innovation programme under grant agreement No 666992. SJC was supported by an Alzheimer’s Research UK Senior Research Fellowship and ESRC/NIHR (ES/L001810/1) and EPSRC (EP/M006093/1) grants. DCA's work on this topic has funding from the EU Horizon 2020 research and innovation programme under grant agreement No 666992, as well as EPSRC grants J020990, M006093 and M020533. Data collection and sharing for this project was funded by the Alzheimer's Disease Neuroimaging Initiative (ADNI) (National Institutes of Health Grant U01 AG024904) and DOD ADNI (Department of Defense award number W81XWH-12-2-0012). The Dementia Research Centre is an ARUK coordination center.
+% summary: what we developed -> what the model can do
+We present here, for the first time, a framework for joint modelling of biomarker progression in multiple dementias simultaneously. The framework allows transferring biomarker trajectories to rare dementias for which there is not enough data to allow estimation of such trajectories, accounting for a different spatial distribution of pathology between dementia varieties. 
 
+% limitations: each region needs to have disease signal -> validation did not work well in some regions -> not accounted for subject specific effects. 
+The model and the results presented here have several limitations. First of all, the model assumes that within each region there is enough disease signal within each region to propely estimate the dysfunctionality scores.  Another limitation is that, in the validation, the inferred trajectories in posterior regions traditionally associted with PCA do not match well with the validation data. One explanation for this might be the lack of disease signal in posterior regions in DTI data during training, as per the previous limitation. Finally, in terms of modelling, our framework did not account for subject specific effects, as we were only interested in estimating population-level trajectories.
+
+% how to address aforementioned limitations + future work
+There are several potential avenues for further research. During training, we can account for missing disease signal in some brain regions by adding other types of dementias that affect other regions, such as various types of Fronto-temporal Dementia or Primary Progressive Aphasia. The estimated PCA trajectories also need to be thoroughly validated using data from modalities other than DTI. The model formulation can also be naturally extended to include subject-specific effects, like in the work of Lorenzi et al., 2017.
 
 %
 % ---- Bibliography ---- 
@@ -266,6 +262,9 @@ Crutch, S.J., Lehmann, M., Schott, J.M., Rabinovici, G.D., Rossor, M.N. and Fox,
 
 \bibitem{hon2017towards}
 Hon, M. and Khan, N., 2017. Towards Alzheimer's Disease Classification through Transfer Learning. arXiv preprint arXiv:1711.11117.
+
+\bibitem{lorenzi2017disease}
+Lorenzi, M., Filippone, M., Alexander, D.C. and Ourselin, S., 2017. Disease Progression Modeling and Prediction through Random Effect Gaussian Processes and Time Transformation. arXiv preprint arXiv:1701.01668.
 
 \end{thebibliography}
 
