--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -141,7 +141,7 @@ where $f \approx GP(0, \Sigma_G)$ models the population-level trajectory. The tr
 
 \subsection{Data acquisition and Preprocessing}
 
-We used 87 controls and 76 PCA subjects from our local dataset, which only had MRI scans. From TADPOLE, out of the subjects that contained at least one FDG PET, AV45, AV1451 or DTI scan, we randomly selected a subset of 230 subjects, in order not to bias the numbers towards the typical AD disease.  Volumetric measures for each subject have been obtained using the Freeusurfer software in both ADNI and our local dataset. For FDG, AV45 and AV1451 PET, we used already extracted SUVR measures from ADNI which were included in the TADPOLE dataset. For DTI, we used fractional anisotropy (FA) measures from white-matter regions adjacent to each lobe. For every lobe, we averaged the biomarker values for regions of interest within each lobe, regressed out age, gender, TIV and dataset (ADNI vs our local dataset) and then normalised the final biomarker values to lie within the [0,1] range.
+We used 87 controls and 76 PCA subjects from our local dataset, which only had MRI scans. From TADPOLE, out of the subjects that contained at least one FDG PET, AV45, AV1451 or DTI scan, we randomly selected a subset of 230 subjects, in order not to bias the numbers towards the typical AD disease.  Volumetric measures for each subject have been obtained using the Freesurfer software in both ADNI and our local dataset. For FDG, AV45 and AV1451 PET, we used already extracted SUVR measures from ADNI which were included in the TADPOLE dataset. For DTI, we used fractional anisotropy (FA) measures from white-matter regions adjacent to each lobe. For every lobe, we averaged the biomarker values for regions of interest within each lobe, regressed out age, gender, TIV and dataset (ADNI vs our local dataset) and then normalised the final biomarker values to lie within the [0,1] range.
 
 \section{Results}
 
